--- a/lib/views/show.erb
+++ b/lib/views/show.erb
@@ -7,6 +7,6 @@
   <h2>Tu veux afficher le potin numéro : <%=params['id']%></h2>
   <p>Auteur : <%= gossip.author %><br/></p>
   <p>Potin : <%= gossip.content %></p>
-  <a href="/gossips/edit/:id">Modifier le potin.</a>
+  <a href="/gossips/id/edit/">Modifier le potin.</a>
 </body>
 </html>
