--- a/lib/views/edit.erb
+++ b/lib/views/edit.erb
@@ -12,5 +12,6 @@
       Modifie ton potin : <input type='text' name='gossip_content'/><br/>
       <input type='submit'/>
     </form>
+    <a href="/">Retour à l'accueil.</a>
   </body>
 </html>
